src/angular-planning/planning.scss
$planning-row-height: 20px;
$planning-cell-width: 20px;
$planning-body-height: 500px;
$planning-border-color: lightgrey;
$planning-today-color: red;
$planning-group-row-color: #f7f7f8;
$planning-hover-color: grey;
$planning-end-of-week-bar-width: 4px;

.planning-wrapper {
    position: relative;
}

.planning-loading {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgba(255, 255, 255, 0.8);
    z-index: 10;
    text-align: center;

    i {
        position: absolute;
        top: 50%;
    }
}

.planning-table {
    table-layout: fixed;
    margin: 0;
    font-size: 10px;
    width: 100%;
    border-spacing: 0;

    border: 1px solid $planning-border-color;
    border-width: 0 1px 1px 0;

    * {
        box-sizing: border-box;
    }

    tr, td, th {
        height: $planning-row-height;
        border: 1px solid $planning-border-color;
        border-width: 1px 0 0 1px;
        background-color: transparent;
    }

    thead {
        display: block;
        width: 100%;

        tr {

            th {
                min-width: $planning-cell-width;
                padding: 0;
                text-align:center;
                vertical-align: middle;

                /* Remove the border on the top left empty cells */
                &:first-child {
                    border: 0;
                }
            }

            /* Remove the border on the top left empty cells */
            &:first-child, &:first-child+tr, &:first-child+tr+tr {
                border: 0;
            }

            .planning-day-hovered-cell {
                background-color: $planning-hover-color;
            }
        }
    }

    tbody {
        display: block;
        width: 100%;
        overflow-y: auto;
        overflow-x: hidden;
        -ms-overflow-style: -ms-autohiding-scrollbar;
        height: $planning-body-height;

        tr:hover {
            th.planning-resources {
                background-color: $planning-hover-color;
            }
        }
    }

    tr.planning-group-row {
        background: $planning-group-row-color;
        cursor: pointer;

        td {
            border-width: 1px 0 0 0;

            &:hover {
                background-color: $planning-group-row-color;
            }
        }

        :nth-child(2) {
            border-width: 1px 0 0 1px;
        }
    }

    th.planning-resources {
        display: table;
        table-layout: fixed;
        width: 100%;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        text-align: left;

        .planning-resource-person {
            text-align: right;
            padding-right: 10px;
        }
    }

    td {
        min-width: $planning-cell-width;

        &.planning-day-cell {
            padding: 0 0 0 0;
            cursor: pointer;
            position: relative;

            &:hover {
                background-color: $planning-hover-color;
            }
        }
    }

    .planning-month {
        max-width: $planning-cell-width;
        text-align: left;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        text-transform: capitalize;

        span {
            position: relative;
            display: inline-block;
            padding-left: 5px;
        }
    }

    .planning-end-of-week-bar {
        position: absolute;
        top: $planning-row-height;
        width: $planning-end-of-week-bar-width;
        height: 100%;
        margin-left: $planning-cell-width - $planning-end-of-week-bar-width / 2;
        background-color: $planning-hover-color;
        z-index: 10;
    }

    th.planning-today-cell {
        background-color: $planning-today-color;
    }

    .planning-day-events {
        height: 100%;
        width: 100%;
    }

    .planning-day-event {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;

        i {
            font-size: 8px;
            position: relative;
            left: 2px;
            top: 4px;
        }
    }
}

